--- a/css/reset.css
+++ b/css/reset.css
@@ -4,5 +4,5 @@ html {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: ftnk, sans-serif;
+    font-family: sans-serif;
 }
